fixed overflow class

--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -434,7 +434,7 @@ html {
   height: 100%; }
   html.overflow {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     overflow: hidden; }
     @supports (-webkit-overflow-scrolling: touch) {
       html.overflow body {
