--- a/web/public/scss/base/_grid.scss
+++ b/web/public/scss/base/_grid.scss
@@ -5,7 +5,7 @@ html {
 
   &.overflow {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
 
     body {
